# fb-gapi

./: .gitignore  README.md  pyproject.toml  setup.py
fb_gapi/: client.py
