[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="fb-gapi",
version="0.1.2",
description = "Async Facebook Messenger Graph API client with retry support"
readme = "README.md"
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
authors = [
  { name = "Jayed", email = "jayedbinjahangir@gmail.com" }
]
dependencies = ["requests", "httpx", "aiofiles", "httpx-retries"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/jayeeed/facebook-messenger-sdk"

[tool.setuptools.packages.find]
where = ["fb_gapi"]
